--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -28,4 +28,4 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     service-url:
-      default-zone: http://localhost:8761/eureka/
+      default-zone: http://service-registry-svc:8761/eureka/
