--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.h2.console.path=/h2
 
 spring.datasource.url=jdbc:h2:file:~/product;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=Adm1n123
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
@@ -35,7 +35,7 @@ offer.queue=product_offer_queue
 offer.anything.routing-key=offer.*
 
 # Service Discovery configuration
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://service-registry-svc:8761/eureka/
 eureka.client.healthcheck.enabled = true
 eureka.client.lease.duration = 5
 eureka.instance.preferIpAddress = true
