--- a/k8s/mysql-sc.yaml
+++ b/k8s/mysql-sc.yaml
@@ -1,5 +1,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: mysql-ebs
-provisioner: kubernetes.io/aws-ebs
+  name: ebs-sc
+provisioner: ebs.csi.aws.com
+volumeBindingMode: WaitForFirstConsumer
+parameters:
+  csi.storage.k8s.io/fstype: xfs
+  encrypted: "true"
