--- a/k8s/mysql-test.yaml
+++ b/k8s/mysql-test.yaml
@@ -19,6 +19,13 @@ spec:
         ports:
         - containerPort: 3306
           name: TCP
+        volumeMounts:
+          - name: mysql-data
+            mountPath: /var/lib/mysql
+    volumes:
+      - name: mysql-data
+        persistentVolumeClaim:
+          claimName: mysql-pvc
 
 ---
 
