--- a/k8s/mysql-test.yaml
+++ b/k8s/mysql-test.yaml
@@ -27,7 +27,7 @@ spec:
       name: mysql-data
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: mysql-ebs
+      storageClassName: ebs-sc
       resources:
         requests:
           storage: 10Gi
