--- a/k8s/mysql-test.yaml
+++ b/k8s/mysql-test.yaml
@@ -22,6 +22,9 @@ spec:
         volumeMounts:
         - name: mysql-data
           mountPath: /var/lib/mysql
+        env:
+          - name: MYSQL_ROOT_PASSWORD
+            value: admin123
   volumeClaimTemplates:
   - metadata:
       name: mysql-data
