--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -10,22 +10,29 @@ spring.devtools.livereload.port=35730
 # JDBC URL  : jdbc:h2:~/product
 # User Name : root
 # Password  : root
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2
 
 # Datasource
-
-spring.datasource.url=jdbc:h2:file:~/product;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:mysql://mysql-svc:3306/products
 spring.datasource.username=root
-spring.datasource.password=Adm1n123
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.password=admin123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-logging.level.org.hibernate.SQL=debug
-spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-management.endpoints.web.exposure.include=*
+spring.jpa.show-sql=true
+
+# spring.datasource.url=jdbc:h2:file:~/product;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER=TRUE
+# spring.datasource.username=root
+# spring.datasource.password=Adm1n123
+# spring.datasource.driver-class-name=org.h2.Driver
+
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# logging.level.org.hibernate.SQL=debug
+# spring.jpa.generate-ddl=true
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
+# management.endpoints.web.exposure.include=*
 
 # RabbitMQ event configuration
 
