adding additional rabbitmq ports

--- a/k8s/rabbitmq.yaml
+++ b/k8s/rabbitmq.yaml
@@ -12,10 +12,11 @@ spec:
         app: rabbitmq
     spec:
       containers:
-      - name: rabbitmq
+      - name: TCP
         image: rabbitmq:latest
         ports:
         - containerPort: 5672
+        - containerPort: 15672
 
 ---
 
