changed rabbitmq host from localhost

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -36,6 +36,9 @@ spring.jpa.show-sql=true
 
 # RabbitMQ event configuration
 
+spring.rabbitmq.host=rabbitmq-svc
+spring.rabbitmq.port=5672
+
 offer.exchange=offer_exchange
 offer.pushed.key=offer.pushed
 offer.queue=product_offer_queue
